==> samuelpoiraud/robot/STM32/QS_branch/QS_i2c.c <==
#include "QS_i2c.h"
#include "QS_ports.h"
#include "QS_watchdog.h"
#include "QS_outputlog.h"
#include "QS_timer.h"
#include "../stm32f4xx_hal/stm32f4xx_hal_i2c.h"
#include "../stm32f4xx_hal/stm32f4xx_hal_dma.h"

void I2C_init(void)
{
	#ifdef USE_I2C1
		/* Enable IOE_I2C and IOE_I2C_GPIO_PORT & Alternate Function clocks */
		__HAL_RCC_I2C1_CLK_ENABLE();
		__HAL_RCC_GPIOB_CLK_ENABLE();
		__HAL_RCC_SYSCFG_CLK_ENABLE();
	#endif

	#ifdef USE_I2C2
		/* Enable IOE_I2C and IOE_I2C_GPIO_PORT & Alternate Function clocks */
		__HAL_RCC_I2C2_CLK_ENABLE();
		__HAL_RCC_GPIOB_CLK_ENABLE();
		__HAL_RCC_SYSCFG_CLK_ENABLE();
	#endif

	PORTS_i2c_init();
	WATCHDOG_init();

	I2C1_HandleStructure.Instance = I2C1;
	I2C1_HandleStructure.Init.ClockSpeed = 100000; //100kHz
	I2C1_HandleStructure.Init.DutyCycle = I2C_DUTYCYCLE_2;
	I2C1_HandleStructure.Init.OwnAddress1 = 0;
	I2C1_HandleStructure.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
	I2C1_HandleStructure.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
	I2C1_HandleStructure.Init.OwnAddress2 = 0;
	I2C1_HandleStructure.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
	I2C1_HandleStructure.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;

	I2C2_HandleStructure.Instance = I2C2;
	I2C2_HandleStructure.Init = I2C1_HandleStructure.Init; //On copie tous les paramètres d'initialisation dans l'I2C2

	#ifdef USE_I2C1
		HAL_I2C_DeInit(&I2C1_HandleStructure);
		HAL_I2C_Init(&I2C1_HandleStructure);
		__HAL_I2C_ENABLE_IT(&I2C1_HandleStructure, I2C_IT_ERR);	//Active Interruption sur détection d'erreur de communication.

		//I2C ERROR : activation des IRQ
		HAL_NVIC_SetPriority(&I2C1_ER_IRQn, 7, 0);

		//I2C Event : pas d'activation des IRQ.
		//HAL_NVIC_SetPriority(&I2C1_EV_IRQn, 7, 0);
	#endif /* def USE_I2C1 */

	#ifdef USE_I2C2
		I2C2_HandleStructure.Instance = I2C2;
		HAL_I2C_DeInit(&I2C2_HandleStructure);
		HAL_I2C_Init(&I2C2_HandleStructure);
		__HAL_I2C_ENABLE_IT(&I2C2_HandleStructure, I2C_IT_ERR);	//Active Interruption sur détection d'erreur de communication.

		//I2C ERROR : activation des IRQ
		HAL_NVIC_SetPriority(&I2C2_ER_IRQn, 7, 0);

		//I2C Event : pas d'activation des IRQ.
		//HAL_NVIC_SetPriority(&I2C2_EV_IRQn, 7, 0);
	#endif /* def USE_I2C2 */
}

void I2C_reset(void){

#ifdef USE_I2C1
	HAL_I2C_DeInit(&I2C1_HandleStructure);
#endif

#ifdef USE_I2C2
	HAL_I2C_DeInit(&I2C2_HandleStructure);
#endif

	I2C_init();
}

bool_e I2C2_read(Uint8 address, Uint8 * data, Uint8 size){
	return I2C_read(&I2C2_HandleStructure, address, data, size);
}

bool_e I2C2_read(Uint8 address, Uint8 * data, Uint8 size)
{
	Uint8 i;
	i2c_bus_error = FALSE;
	watchdog_id = WATCHDOG_create_flag(100, &timeout);	//10ms max for the I2C frame !
	if(watchdog_id == 0xFF)
	{
		debug_printf("Watchdog_create fail - I2C read exited\n");
		return FALSE;
	}

	//while(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BUSY) && timeout == FALSE && i2c_bus_error == FALSE);
	I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, ENABLE);
	I2C_NACKPositionConfig(I2C2_I2C_HANDLE, I2C_NACKPosition_Current);

	//Envoyer un motif de START
	I2C_GenerateSTART(I2C2_I2C_HANDLE, ENABLE);

	//Le flag SB doit passer à 1.
	// -> Lire StatusRegister1 et écrire l'adresse dans DR
	while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_EVENT_MASTER_MODE_SELECT)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);				//EV5

	I2C_Send7bitAddress(I2C2_I2C_HANDLE, address, I2C_Direction_Receiver);

	while(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_ADDR) && timeout == FALSE && i2c_bus_error == FALSE);

	//Si une seule donnée à lire : on désactive l'acquittement maintenant.
	if(size == 1)
		I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);

	//Le flag ADDR doit passer à 1 (après envoi de l'adresse et réception de l'acquittement)
	// -> Lire StatusRegister1 et le StatusRegister2
	while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);	//EV6

	for(i=0;i<size;i++)
	{
		//Dernière donnée à lire ? -> on programme le NACK et la fin.
		if(size != 1 && i == size-1)
		{
			I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);
			I2C_GenerateSTOP(I2C2_I2C_HANDLE, ENABLE);
		}

		//La donnée est lue... et RxNE (Rx Not Empty) passe à 1.
		while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_FLAG_BTF)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);		//EV7 ou EV7_1 pour la dernière donnée

		//Pour chaque donnée, RxNE (Rx Not Empty) passe à 1, on lit la donnée dans DR (RxNE repasse alors tout seul à 0)
		data[i] = I2C_ReceiveData(I2C2_I2C_HANDLE);
	}
	if(timeout == FALSE)
		WATCHDOG_stop(watchdog_id);
	if(timeout || i2c_bus_error)
	{
		//error_exit();
		return FALSE;
	}
	return TRUE;
}
