==> samuelpoiraud/robot/STM32/QS/QS_i2c.c <==
#include "QS_i2c.h"
#include "QS_ports.h"
#include "QS_watchdog.h"
#include "QS_outputlog.h"
#include "../stm32f4xx/stm32f4xx_i2c.h"

void I2C_init(void)
{
	I2C_InitTypeDef I2C_InitStructure;

	PORTS_i2c_init();
	WATCHDOG_init();

	I2C_InitStructure.I2C_ClockSpeed = 50000; //100kHz   					/*!< Specifies the clock frequency. This parameter must be set to a value lower than 400kHz */
	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;                				/*!< Specifies the I2C mode. This parameter can be a value of @ref I2C_mode */
	I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;           			/*!< Specifies the I2C fast mode duty cycle. This parameter can be a value of @ref I2C_duty_cycle_in_fast_mode */
	I2C_InitStructure.I2C_OwnAddress1 = 0;         							/*!< Specifies the first device own address. This parameter can be a 7-bit or 10-bit address. */
	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;                 				/*!< Enables or disables the acknowledgement. This parameter can be a value of @ref I2C_acknowledgement */
	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit; /*!< Specifies if 7-bit or 10-bit address is acknowledged. This parameter can be a value of @ref I2C_acknowledged_address */


	#ifdef USE_I2C1
		#warning "I2C1 not implemented"
	#endif /* def USE_I2C1 */

	#ifdef USE_I2C2
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C2, ENABLE);
		I2C_Init(I2C2_I2C_HANDLE, &I2C_InitStructure);
		I2C_Cmd(I2C2_I2C_HANDLE, ENABLE);
		I2C_ITConfig(I2C2_I2C_HANDLE,I2C_IT_ERR,ENABLE);	//Active Interruption sur détection d'erreur de communication.

		NVIC_InitTypeDef NVIC_InitStructure;
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 7;
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;

		//I2C ERROR : activation des IRQ
		NVIC_InitStructure.NVIC_IRQChannel = I2C2_ER_IRQn;
		NVIC_Init(&NVIC_InitStructure);

		//I2C Event : pas d'activation des IRQ.
		//NVIC_InitStructure.NVIC_IRQChannel = I2C2_EV_IRQn;
		//NVIC_Init(&NVIC_InitStructure);
	#endif /* def USE_I2C2 */
}

void I2C_reset(void){
	I2C_SoftwareResetCmd(I2C2_I2C_HANDLE,ENABLE);
	I2C_SoftwareResetCmd(I2C2_I2C_HANDLE,DISABLE);
	I2C_DeInit(I2C2_I2C_HANDLE);
	I2C_init();
}

bool_e I2C2_read(Uint8 address, Uint8 * data, Uint8 size)
{
	Uint8 i;
	i2c_bus_error = FALSE;
	watchdog_id = WATCHDOG_create_flag(100, &timeout);	//10ms max for the I2C frame !
	if(watchdog_id == 0xFF)
	{
		debug_printf("Watchdog_create fail - I2C read exited\n");
		return FALSE;
	}

	//while(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BUSY) && timeout == FALSE && i2c_bus_error == FALSE);
	I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, ENABLE);
	I2C_NACKPositionConfig(I2C2_I2C_HANDLE, I2C_NACKPosition_Current);

	//Envoyer un motif de START
	I2C_GenerateSTART(I2C2_I2C_HANDLE, ENABLE);

	//Le flag SB doit passer à 1.
	// -> Lire StatusRegister1 et écrire l'adresse dans DR
	while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_EVENT_MASTER_MODE_SELECT)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);				//EV5

	I2C_Send7bitAddress(I2C2_I2C_HANDLE, address, I2C_Direction_Receiver);

	while(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_ADDR) && timeout == FALSE && i2c_bus_error == FALSE);

	//Si une seule donnée à lire : on désactive l'acquittement maintenant.
	if(size == 1)
		I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);

	//Le flag ADDR doit passer à 1 (après envoi de l'adresse et réception de l'acquittement)
	// -> Lire StatusRegister1 et le StatusRegister2
	while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);	//EV6

	for(i=0;i<size;i++)
	{
		//Dernière donnée à lire ? -> on programme le NACK et la fin.
		if(size != 1 && i == size-1)
		{
			I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);
			I2C_GenerateSTOP(I2C2_I2C_HANDLE, ENABLE);
		}

		//La donnée est lue... et RxNE (Rx Not Empty) passe à 1.
		while(I2C_CheckEvent(I2C2_I2C_HANDLE,I2C_FLAG_BTF)!=SUCCESS && timeout == FALSE && i2c_bus_error == FALSE);		//EV7 ou EV7_1 pour la dernière donnée

		//Pour chaque donnée, RxNE (Rx Not Empty) passe à 1, on lit la donnée dans DR (RxNE repasse alors tout seul à 0)
		data[i] = I2C_ReceiveData(I2C2_I2C_HANDLE);
	}
	if(timeout == FALSE)
		WATCHDOG_stop(watchdog_id);
	if(timeout || i2c_bus_error)
	{
		//error_exit();
		return FALSE;
	}
	return TRUE;
}

bool_e I2C2_read(Uint8 address, Uint8 * data, Uint8 size)
{
  //    I2C2_I2C_HANDLE->CR2 |= I2C_IT_ERR;  interrupts for errors

	if (!size)
		return FALSE;
	i2c_bus_error = FALSE;
	watchdog_id = WATCHDOG_create_flag(100, &timeout);	//10ms max for the I2C frame !
	if(watchdog_id == 0xFF)
	{
		debug_printf("Watchdog_create fail - I2C read exited\n");
		return FALSE;
	}


  // Wait for idle I2C interface

 // Timed(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BUSY));

  // Enable Acknowledgement, clear POS flag

  I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, ENABLE);
  I2C_NACKPositionConfig(I2C2_I2C_HANDLE, I2C_NACKPosition_Current);

  // Intiate Start Sequence (wait for EV5

  I2C_GenerateSTART(I2C2_I2C_HANDLE, ENABLE);
  Timed(!I2C_CheckEvent(I2C2_I2C_HANDLE, I2C_EVENT_MASTER_MODE_SELECT));

  // Send Address

  I2C_Send7bitAddress(I2C2_I2C_HANDLE, address, I2C_Direction_Receiver);

  // EV6

  Timed(!I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_ADDR));

  if (size == 1)
	{

	  // Clear Ack bit

	  I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);

	  // EV6_1 -- must be atomic -- Clear ADDR, generate STOP

	  __disable_irq();
	  (void) I2C2_I2C_HANDLE->SR2;
	  I2C_GenerateSTOP(I2C2_I2C_HANDLE,ENABLE);
	  __enable_irq();

	  // Receive data   EV7

	  Timed(!I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_RXNE));
	  *data++ = I2C_ReceiveData(I2C2_I2C_HANDLE);

	}
  else if (size == 2)
	{
	  // Set POS flag

	  I2C_NACKPositionConfig(I2C2_I2C_HANDLE, I2C_NACKPosition_Next);

	  // EV6_1 -- must be atomic and in this order

	  __disable_irq();
	  (void) I2C2_I2C_HANDLE->SR2;                           // Clear ADDR flag
	  I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);       // Clear Ack bit
	  __enable_irq();

	  // EV7_3  -- Wait for BTF, program stop, read data twice

	  Timed(!I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BTF));

	  __disable_irq();
	  I2C_GenerateSTOP(I2C2_I2C_HANDLE,ENABLE);
	  *data++ = I2C2_I2C_HANDLE->DR;
	  __enable_irq();

	  *data++ = I2C2_I2C_HANDLE->DR;

	}
  else
	{
	  (void) I2C2_I2C_HANDLE->SR2;                           // Clear ADDR flag
	  while (size-- != 3)
	{
	  // EV7 -- cannot guarantee 1 transfer completion time, wait for BTF
		  //        instead of RXNE

	  Timed(!I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BTF));
	  *data++ = I2C_ReceiveData(I2C2_I2C_HANDLE);
	}

	  Timed(!I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_BTF));

	  // EV7_2 -- Figure 1 has an error, doesn't read N-2 !

	  I2C_AcknowledgeConfig(I2C2_I2C_HANDLE, DISABLE);           // clear ack bit

	  __disable_irq();
	  *data++ = I2C_ReceiveData(I2C2_I2C_HANDLE);             // receive byte N-2
	  I2C_GenerateSTOP(I2C2_I2C_HANDLE,ENABLE);                  // program stop
	  __enable_irq();

	  *data++ = I2C_ReceiveData(I2C2_I2C_HANDLE);             // receive byte N-1

	  // wait for byte N
	  Timed(!I2C_CheckEvent(I2C2_I2C_HANDLE, I2C_EVENT_MASTER_BYTE_RECEIVED));
	  *data++ = I2C_ReceiveData(I2C2_I2C_HANDLE);

	  size = 0;

	}

  // Wait for stop
  Timed(I2C_GetFlagStatus(I2C2_I2C_HANDLE, I2C_FLAG_STOPF));

  WATCHDOG_stop(watchdog_id);

  return TRUE;

 errReturn:
	 if(!timeout)
		WATCHDOG_stop(watchdog_id);
  return FALSE;
}
